# paradigm-agilecards

./: .dockerignore  .gitignore  .gitmodules  DECISIONS.md  README.md  RUNNER_CONTRACT.md  SKILL.md  renovate.json
.github/: AUTO_MERGE.md
.github/workflows/: ci.yml  verify.yml
apps/board/: docker-compose.gantry.yml
apps/board/backend/: package-lock.json
apps/board/brand/: tokens.css
apps/board/marketing/: .gitignore  tailwind.config.cjs  vite.config.ts
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  app.py  package.json  pyproject.toml
backend/cards_api/: __init__.py  audit.py  auth.py  config.py  db.py  deps.py  events.py  main.py  models.py  planner.py  rates.py  repo.py  store.py
backend/cards_api/routers/: __init__.py  audit_admin.py  cards.py  columns.py  health.py  ranks.py  rates_router.py  retros.py  sprints.py  sse.py  stories.py  triage.py  views.py
backend/contracts/: README.md  requirements.txt  test_paradigm_auth_contract.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema_rls.py
backend/scripts/: import_legacy.py  mint_dev_token.py
backend/src/: server.ts
backend/src/db/: ranks.ts  sqlite.ts  views.test.ts  views.ts
backend/src/fs/: cards.ts
backend/src/routes/: cards.test.ts  cards.ts
backend/tests/: conftest.py  test_audit_log.py  test_auth_verify.py  test_cards_api.py  test_config_secrets.py  test_endpoint_auth.py  test_healthz.py  test_org_isolation.py  test_retros.py  test_rls_postgres.py  test_smoke_pg.py  test_sprints.py  test_stories.py  test_triage.py  test_views.py
brand/: BRAND_HANDOFF_GANTRY_2026-06-18.md  README.md  tailwind.preset.cjs
dashboard-v0/: HANDOFF_2026-05-17_dashboard-v0.md
deploy/agilecards/: .env.example  .gitattributes  Caddyfile  README.md  docker-compose.yml
deploy/agilecards/initdb/: 01-app-role.sh
docs/: PERSISTENT_TUNNEL.md
docs/adr/: ADR-2026-07-16-fastapi-postgres-rls-backend.md  ADR-2026-07-23-verify-gate-and-audit-trail.md
docs/audits/: AUDIT_2026-07-16_alpha-gap-list.md
docs/board/: DASHBOARD_ROADMAP.md  PERSISTENT_TUNNEL.md  RULES.md  SAVED_VIEWS_V0_SCOPE.md  cloudflared-tunnel.md
docs/board/handoffs/: HANDOFF_2026-05-17_dashboard-v0plus.md  (+8 more)
docs/briefs/: FABLE_BRIEF_agentic-dev-must-have.md
docs/care-package/: 00_README.md  01_RECONCILIATION_MEMO.md  02_REVISED_HANDOFF.md  03_AGILE_AGENTIC_RESEARCH.md  04_COUNCIL_PROMPT.md  05_COUNCIL_TRANSCRIPT_FULL.md  06_COUNCIL_SYNTHESIS.md  07_FABLE_BRIEF.md  08_SCOPE_UPDATE_AND_ENGINE_VALIDATION.md
docs/handoffs/: HANDOFF_2026-05-17_cards-skill-v1.1.md  HANDOFF_2026-05-20_runner-chunk-4.md  HANDOFF_2026-05-23_sprint-planner-and-capacity.md  HANDOFF_2026-06-25_gantry-portal-embed.md  HANDOFF_2026-06-30_k11-jwt-auth-org-isolation.md  HANDOFF_2026-06-30_k16-contract-tests.md  HANDOFF_2026-06-30_k2-paradigm-agilecards-rename.md  HANDOFF_2026-07-16_agentic-dev-vision-and-audit-synthesis.md  HANDOFF_2026-07-23_verify-gate-audit-trail.md
docs/security/: DATA_PROTECTION.md
docs/status/: STATUS_2026-07-23_ruff-drift-and-pr-sweep.md
engine/: DEFINITION_OF_DONE.md  SKILL.md  tier_map_claude.yaml  tier_map_local.yaml  tier_pricing.yaml
engine/dashboard-v0/: index.html
engine/examples/: b001-03-add-rate-limit-middleware.md
engine/runner/: pyproject.toml
engine/templates/: batch_manifest.yaml  card.md
engine/tests/: atomic_rename_test.ps1
examples/: b001-03-add-rate-limit-middleware.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.contracts.config.ts
frontend/contracts/: README.md  llm-client.test.ts
frontend/src/: App.tsx  main.tsx
legacy/board-express/: .env.example  README.md  docker-compose.yml
marketing/: README.md  index.html  package.json  tailwind.config.cjs
marketing/src/: App.tsx  main.tsx
runner/: README.md  pyproject.toml
runner/src/cards_runner/: __init__.py
runner/src/cards_runner/cli/: __main__.py  doctor.py
runner/src/cards_runner/common/: project_config.py  types.py
runner/src/cards_runner/daemon/: __main__.py  ac_editor.py  amendment_editor_client.py  amendment_reviewer.py  atomic_rename_sentinel.py  claim.py  confidence_gate.py  daemon.py  diff_stats.py  eligibility.py  merge_gate.py  orphan.py  pr_lifecycle.py  sibling_reviewer.py  spawner.py  unblocker.py  worktree.py
runner/src/cards_runner/metrics/: __init__.py  calibration.py  estimator.py  events.py  priors.py  ramp.py  store.py  writer.py
runner/src/cards_runner/store/: __init__.py  dolt_store.py  migrate_v1.py  models.py  projection.py  repository.py  schema.py  sqlite_store.py
runner/src/cards_runner/verifier/: risk_factor.py  runner.py
runner/src/cards_runner/verifier/handlers/: subjective.py
runner/src/cards_runner/worker_stub/: cost.py  sdk_invoker.py  worker.py
runner/templates/: metrics_priors.yaml
runner/tests/: test_amendment_editor_client.py  test_amendment_protocol.py  test_amendment_reviewer.py  test_boot_alive_check.py  test_calibration.py  test_canonical_config.py  test_card_metrics_table.py  test_chunk5_cli.py  test_confidence_gate.py  test_doctor.py  test_eligibility.py  test_gate3_cli.py  test_ledger_chunk1_doctor.py  test_ledger_daemon_integration.py  test_ledger_writer.py  test_merge_gate.py  test_metric_estimates_table.py  test_metrics_priors.py  test_process_group.py  test_ramp.py  test_reaper.py  test_reviewer_cost.py  test_risk_factors.py  test_sdk_invoker.py  test_sibling_reviewer.py  test_tools.py  test_work_type_column.py
runner/tests/manual/: smoke_sdk_tools.py
templates/: card.md  project_config.yaml
tests/: README.md  synthetic_dry_run_walkthrough.md
verification/cards/: CARDS-001.md  CARDS-002.md  CARDS-003.md  CARDS-006.md  CARDS-007.md  CARDS-008.md  CARDS-013.md  CARDS-014.md
verify/: README.md  REPORT_TEMPLATE.md  smoke.yml  tier3_paths.txt  tier_map.yml
verify/assertions/: README.md  api-cards.yml  home.yml
verify/ci/: apply_branch_protection.ps1  classify_tier.sh  deep_gate.sh  quick_smoke.sh
verify/reports/: .gitkeep
(+290 files in other folders)
