[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paradigm-agilecards-backend"
version = "1.0.0"
description = "Paradigm AgileCards backend (FastAPI). K11: JWKS verify, org isolation, Infisical secrets."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  # AC-CARDS-003: direct JWKS RS256 verification. The [crypto] extra pulls in
  # `cryptography`, which PyJWT needs for RS256.
  "pyjwt[crypto]>=2.8",
  # Persistence (ADR-2026-07-16): Postgres via SQLAlchemy 2 (sync ORM) +
  # psycopg 3, schema versioned with Alembic. RLS lives in the migrations.
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "httpx>=0.27",
  "ruff>=0.5",
  "mypy>=1.10",
]
# AC-CARDS-008: secrets from Infisical at boot. Kept out of the base deps so CI
# and local dev (which use env-var fallback) don't require it; the production
# image installs `.[infisical]`.
infisical = [
  "infisical-python>=2.3",
]
# One-off operational tooling (scripts/import_legacy.py needs YAML frontmatter
# parsing). Not part of the runtime image.
tools = [
  "pyyaml>=6",
]

[tool.setuptools]
# app.py remains as a thin entrypoint shim (uvicorn app:app) re-exporting the
# package's FastAPI instance.
py-modules = ["app"]

# find, not an explicit list: setuptools takes `packages = ["cards_api"]`
# literally and silently DROPS subpackages (cards_api.routers) from
# non-editable installs -- editable dev installs mask it, the production
# image does not.
[tool.setuptools.packages.find]
include = ["cards_api*"]

[tool.ruff]
line-length = 100

# Audit S13: the default E/F set alone is a weak signal. Bugbear, isort,
# pyupgrade, and simplify catch real defects; keep the backend honest.
[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM"]
# B008 flags call-in-default, which is FastAPI's dependency-injection idiom
# (`arg: T = Depends(...)`) -- a false positive across this entire package.
ignore = ["B008"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

# Audit T17: the auth-critical package was the least type-checked code in the
# repo. Gated in CI (no continue-on-error). Scope is the package, not tests.
[tool.mypy]
files = ["cards_api", "app.py"]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
# Alembic migration files use runtime-generated op bindings.
module = "migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
# Optional prod-only dependency; ships no stubs. The import is guarded.
module = "infisical_client"
ignore_missing_imports = true
