[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paradigm-agilecards-backend"
version = "1.0.0"
description = "Paradigm AgileCards backend (FastAPI). K11: JWKS verify, org isolation, Infisical secrets."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  # AC-CARDS-003: direct JWKS RS256 verification. The [crypto] extra pulls in
  # `cryptography`, which PyJWT needs for RS256.
  "pyjwt[crypto]>=2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "httpx>=0.27",
  # Pinned exact: ruff 0.16.0 (2026-07-23) enabled isort/I001 by default, which
  # this repo never selected, reddening previously-clean imports on unchanged
  # code. Pin to last known-good for deterministic CI; bump deliberately in its
  # own PR. Same pin lives in engine/runner/pyproject.toml and contracts/requirements.txt.
  "ruff==0.15.22",
]
# AC-CARDS-008: secrets from Infisical at boot. Kept out of the base deps so CI
# and local dev (which use env-var fallback) don't require it; the production
# image installs `.[infisical]`.
infisical = [
  "infisical-python>=2.3",
]

[tool.setuptools]
packages = ["cards_api"]
# app.py remains as a thin entrypoint shim (uvicorn app:app) re-exporting the
# package's FastAPI instance.
py-modules = ["app"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
